@@ -1,6 +1,7 @@
 [B]0.9.31[/B]
 CODECFLAGS - Add support for Atmos and DTS-X flags based on filename
 DIALOGVIDEOINFO - Add tags and set information
+PVRGUIDE - Add scrollbar in mouse mode
 
 [B]0.9.30[/B]
 WIDGETS - Fix for square widgets
